# libxyzimage

./: .gitignore  AUTHORS.md  CMakeLists.txt  COPYING  Makefile.am  README.md  TODO  configure.ac
extra/: libxyzimage.pc
include/: xyzimage.h
pkg-config/: libxyzimage.pc.in  xyzimage-config.cmake
src/: xyzimage.c
